[package]
name = "owa_enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
rayon = "1.10.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
